Add MarkdownMessage component and update dependencies

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -4,6 +4,9 @@
   "generate": "Generate",
   "thinking": "Thinking...",
   "clearMap": "Clear Map",
+  "ask": "Ask",
+  "qnaPlaceholder": "Type your question…",
+  "clearQna": "Clear Q&A",
   "settings": "Settings",
   "nextGenVisualization": "Next-Gen Visualization",
   "visualizeComplexThoughts": "Visualize your <1>complex thoughts</1> effortlessly.",
