--- a/locales/ja/translation.json
+++ b/locales/ja/translation.json
@@ -4,6 +4,9 @@
   "generate": "生成",
   "thinking": "考え中...",
   "clearMap": "マップをクリア",
+  "ask": "質問",
+  "qnaPlaceholder": "質問を入力…",
+  "clearQna": "Q&Aをクリア",
   "settings": "設定",
   "nextGenVisualization": "次世代の視覚化",
   "visualizeComplexThoughts": "複雑な思考を<1>簡単に視覚化</1>します。",
